# SPD-Grid-Bot

./: Cargo.toml  LISCENCE.txt  README.md  config.toml
src/: analyzer.rs  config.rs  copytrade.rs  engine.rs  main.rs  models.rs  network.rs  trader.rs
