[package]
name    = "spd-grid-bot"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "spd-grid-bot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio            = { version = "1",    features = ["full"] }
# Serialization
serde            = { version = "1.0",  features = ["derive"] }
serde_json       = "1.0"
# Time
chrono           = { version = "0.4",  features = ["serde"] }
# HTTP client
reqwest          = { version = "0.11", features = ["json"] }
# Config
toml             = "0.8"
# WebSocket
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util     = "0.3"
# Logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
# Binance signing
hmac             = "0.12"
sha2             = "0.10"
hex              = "0.4"
# Copy-trade HTTP server
axum             = { version = "0.7", features = ["json"] }
tower            = "0.4"
# Unique IDs for followers
uuid             = { version = "1", features = ["v4"] }
# Env vars
dotenv           = "0.15"
